Fix login form layout

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -376,7 +376,7 @@ site.login.username=Username:
 site.login.password=Password:
 site.login.username.placeholder=Enter username…
 site.login.password.placeholder=Enter password…
-site.login.button=Login
+site.login.button=Sign In
 site.login.error=Incorrect user data!
 site.help.title=Digest Service and Telegram Bot Commands Cheat Sheet
 site.help.title.content=Table of Contents
