--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -376,7 +376,7 @@ site.login.username=Имя:
 site.login.password=Пароль:
 site.login.username.placeholder=Имя пользователя…
 site.login.password.placeholder=Пароль пользователя…
-site.login.button=Вход
+site.login.button=Войти
 site.login.error=Неправильные данные пользователя!
 site.help.title=Справка по сервису и командам Telegram-бота
 site.help.title.content=Содержание
