Fix layout for macOS

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -359,7 +359,7 @@ site.obey.send.image=Image
 site.obey.send.image.url=Image Url
 site.obey.flat.title=Flat Service settings
 site.obey.flat.variants=Maximum suggestions:
-site.obey.flat.variants.number=Number
+site.obey.flat.variants.number=#
 site.obey.flat.subscribers=Subscriber Ids:
 site.obey.flat.subscribers.comma=Separated by a comma, without spaces
 site.obey.flat.url=URL Link
