--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -359,7 +359,7 @@ site.obey.send.image=Изображение
 site.obey.send.image.url=Ссылка на изображение
 site.obey.flat.title=Настройки предложений недвижимости
 site.obey.flat.variants=Лимит предложений:
-site.obey.flat.variants.number=Номер
+site.obey.flat.variants.number=№
 site.obey.flat.subscribers=ИД подписчиков:
 site.obey.flat.subscribers.comma=Через запятую, без пробелов
 site.obey.flat.url=URL-адрес
