Fix chat description

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -261,7 +261,7 @@ site.content.head.title.search=Search results, query: "<em>%s</em>"
 site.content.head.title.search.user=Search results, user: <em>%s</em>
 site.content.head.title.search.user.text=Search results, query: "<em>%s</em>", user: <em>%s</em>
 site.content.head.description=\
-Chat ID: %d, <a href="%s" title="MotoFan.Ru chat in Telegram." target="_blank">%s</a>, \
+<a href="%s" title="MotoFan.Ru chat in Telegram, chat id: %d." target="_blank">%s</a>, \
 <a href="/users" title="Show a list of all users who added messages to the digest.">All users</a>
 site.content.head.icon.title=Go!
 site.content.empty=No matching records found in the database.
