--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -261,7 +261,7 @@ site.content.head.title.search=Результаты поиска по запро
 site.content.head.title.search.user=Сообщения пользователя <em>%s</em>
 site.content.head.title.search.user.text=Результаты поиска по запросу: "<em>%s</em>", пользователь: <em>%s</em>
 site.content.head.description=\
-Номер чата: %d, <a href="%s" title="Чат MotoFan.Ru в Telegram." target="_blank">%s</a>, \
+<a href="%s" title="Чат MotoFan.Ru в Telegram, номер чата %d." target="_blank">%s</a>, \
 <a href="/users" title="Посмотреть список всех пользователей, добавлявших сообщения в дайджест.">Все пользователи</a>
 site.content.head.icon.title=Вперёд!
 site.content.empty=Подходящие записи не найдены в базе данных.
