Add additional update rates time

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -414,7 +414,7 @@ site.help.command.rate=&bull; <strong class="help-command">/rate</strong> \
 — Show current quotes of currencies and precious metals of various national banks.
 site.help.command.rate.alt=The result of the /rate command.
 site.help.command.rate.desc=\
-Quotes are updated daily and the difference is calculated based on the previous values. \
+Quotes are updated twice a day and the difference is calculated based on the previous values. \
 There is \
 <a href="/api/rate" title="Exchange rate values." target="_blank">a special API</a> \
 that displays rates in a convenient JSON format.<br/><br/>\
@@ -562,7 +562,7 @@ receiving and sending reports occurs at 15:00 every day.<br/>\
 phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Service for receiving and updating exchange rates from all official sources, \
-receiving and updating rates occurs at 13:00 every day.<br/>\
+receiving and updating rates occurs at 13:00 and 16:00 twice a day.<br/>\
 &bull; <strong class="help-argument">flat.report.send</strong> \
 — Service for receiving and sending apartment suggestion reports \
 receiving and sending reports occurs at 06:00 and 18:00 every day.<br/><br/>\
