--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -414,7 +414,7 @@ site.help.command.rate=&bull; <strong class="help-command">/rate</strong> \
 — Показать актуальные котировки валют и драгоценных металов различных национальных банков.
 site.help.command.rate.alt=Команда /rate, результат выполнения.
 site.help.command.rate.desc=\
-Котировки обновляются каждый день, разница рассчитывается на основе предыдущего значения. \
+Котировки обновляются каждый день дважды, разница рассчитывается на основе предыдущего значения. \
 Для собственных нужд можно использовать \
 <a href="/api/rate" title="Котировки валют и металлов." target="_blank">специальное API</a>, \
 выводящее котировки в удобном формате JSON.<br/><br/>\
@@ -562,7 +562,7 @@ site.help.other=\
 фраза отправляется в 07:00 каждый день.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Сервис получения и обновления котировок со всех официальных источников, \
-получение и обновление происходит в 13:00 каждый день.<br/>\
+получение и обновление происходит в 13:00 и 16:00 дважды в день.<br/>\
 &bull; <strong class="help-argument">flat.report.send</strong> \
 — Сервис получения и отправки отчётов предложений недвижимости, \
 получение и отправка отчётов происходит в 06:00 и 18:00 каждый день.<br/><br/>\
