--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -565,7 +565,7 @@ phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 receiving and updating rates occurs at 13:00 and 16:00 twice a day.<br/>\
 &bull; <strong class="help-argument">flat.report.send</strong> \
 — Service for receiving and sending apartment suggestion reports \
-receiving and sending reports occurs at 06:00 and 18:00 every day.<br/><br/>\
+receiving and sending reports occurs at 06:00 and 18:00 twice a day.<br/><br/>\
 <strong>Additional functionality related to editing database tables is available from the \
 administration module.</strong>
 site.help.other.admin=Current bot administrators: %admin%.
