--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -565,7 +565,7 @@ site.help.other=\
 получение и обновление происходит в 13:00 и 16:00 дважды в день.<br/>\
 &bull; <strong class="help-argument">flat.report.send</strong> \
 — Сервис получения и отправки отчётов предложений недвижимости, \
-получение и отправка отчётов происходит в 06:00 и 18:00 каждый день.<br/><br/>\
+получение и отправка отчётов происходит в 06:00 и 18:00 дважды в день.<br/><br/>\
 <strong>Дополнительная функциональность, связанная с редактированием таблиц базы данных доступна из \
 администраторского модуля.</strong>
 site.help.other.admin=Текущие администраторы бота: %admin%.
