Fix digest changing bug
Rewrite digests saving routine

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -192,6 +192,9 @@ Recorded.\n\
 I recorded it, %username%.\n\
 Recorded, %username%.\n\
 Saved.
+bot.hashtag.digest.changed=\
+I changed it.\n\
+Digest was changed.
 bot.hashtag.digest.error.length=Message too long! Cannot add this to the digest :3
 bot.hashtag.digest.error.empty=Cannot add a blank message to the digest.
 bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
