--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -192,6 +192,9 @@ bot.hashtag.digest.ok=\
 Записала, %username%.\n\
 Записано, %username%.\n\
 Сохранено.
+bot.hashtag.digest.changed=\
+Изменила!\n\
+Дайджест был изменён.
 bot.hashtag.digest.error.length=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
 bot.hashtag.digest.error.empty=Не могу добавить пустое сообщение в дайджест.
 bot.hashtag.digest.subscribe.title=Новый дайджест в Telegram-группе "%s"!
