--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -193,8 +193,10 @@ bot.hashtag.digest.ok=\
 Записано, %username%.\n\
 Сохранено.
 bot.hashtag.digest.changed=\
-Изменила!\n\
-Дайджест был изменён.
+Я поправила твой дайджест.\n\
+Поправила!\n\
+Дайджест был изменён.\n\
+Изменено!
 bot.hashtag.digest.error.length=Слишком длинное сообщение. Низзя такое добавлять в дайджест! :з
 bot.hashtag.digest.error.empty=Не могу добавить пустое сообщение в дайджест.
 bot.hashtag.digest.subscribe.title=Новый дайджест в Telegram-группе "%s"!
