--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -193,8 +193,10 @@ I recorded it, %username%.\n\
 Recorded, %username%.\n\
 Saved.
 bot.hashtag.digest.changed=\
-I changed it.\n\
-Digest was changed.
+I corrected your digest.\n\
+Corrected!\n\
+The digest has been changed.\n\
+Changed!
 bot.hashtag.digest.error.length=Message too long! Cannot add this to the digest :3
 bot.hashtag.digest.error.empty=Cannot add a blank message to the digest.
 bot.hashtag.digest.subscribe.title=New digest in the "%s" group from Telegram!
