Fix same chat digest subscribing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -72,6 +72,7 @@ bot.inline.error.subscribe.admin=❌ Groups subscribing is only possible for the
 bot.inline.error.show.admin=❌ This action is available only to the administrator.
 bot.inline.error.subscribe.exist=❌ Chat has already been subscribed.
 bot.inline.error.unsubscribe.exist=❌ Chat has already been unsubscribed.
+bot.inline.error.subscribe.same=❌ You cannot subscribe a chat to itself.
 bot.inline.subscribe.subscribed=✅ Chat Subscribed.
 bot.inline.subscribe.unsubscribed=✅ Chat Unsubscribed.
 bot.inline.greeting.on=✅ Greetings in chat is enabled.
