Start implementing separate COVID reports

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -123,7 +123,9 @@ Chat "%s" with id `%d` subscriptions to various channels.\n\n\
 Status: %s\n\n\
 2. Digests and News from MotoFan.Ru group in Telegram\n\
 Status: %s\n\n\
-3. Daily COVID-19 pandemic report in Russian Federation\n\
+3. Daily COVID-19 pandemic report in the Russian Federation\n\
+Status: %s\n\n\
+4. Daily COVID-19 pandemic report in the Ukraine\n\
 Status: %s\n\n\
 Please select an action:
 bot.command.subscribe.subscribed=✅ Subscribed.
@@ -134,6 +136,8 @@ bot.command.subscribe.button.subscribe.digest=2. Subscribe
 bot.command.subscribe.button.unsubscribe.digest=2. Unsubscribe
 bot.command.subscribe.button.subscribe.covid=3. Subscribe
 bot.command.subscribe.button.unsubscribe.covid=3. Unsubscribe
+bot.command.subscribe.button.subscribe.covid.ua=4. Subscribe
+bot.command.subscribe.button.unsubscribe.covid.ua=4. Unsubscribe
 bot.command.debug.help=\
 Please choose `/debug` command with argument:\n\
 /debug VRates — Refresh exchange rates.\n\
