--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -125,6 +125,8 @@ bot.command.subscribe=\
 Статус: %s\n\n\
 3. Ежедневный отчёт по пандемии COVID-2019 в России\n\
 Статус: %s\n\n\
+4. Ежедневный отчёт по пандемии COVID-2019 в Украине\n\
+Статус: %s\n\n\
 Пожалуйста выберите действие:
 bot.command.subscribe.subscribed=✅ Подписка оформлена.
 bot.command.subscribe.unsubscribed=❌ Подписка не оформлена.
@@ -134,6 +136,8 @@ bot.command.subscribe.button.subscribe.digest=2. Подписаться
 bot.command.subscribe.button.unsubscribe.digest=2. Отписаться
 bot.command.subscribe.button.subscribe.covid=3. Подписаться
 bot.command.subscribe.button.unsubscribe.covid=3. Отписаться
+bot.command.subscribe.button.subscribe.covid.ua=4. Подписаться
+bot.command.subscribe.button.unsubscribe.covid.ua=4. Отписаться
 bot.command.debug.help=\
 Выберите команду `/debug` с параметром:\n\
 /debug VRates — Обновить котировки валют.\n\
