Connect frontend with COVID UA subscribers

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -356,10 +356,11 @@ site.obey.setup=Настройки Telegram-бота
 site.obey.subscribe.digest=Форма добавления подписчиков на дайджесты
 site.obey.subscribe.motofan=Форма добавления подписчиков на посты MotoFan.Ru
 site.obey.subscribe.covid=Форма добавления подписчиков на отчёты COVID-2019
+site.obey.subscribe.covid.ua=Форма добавления подписчиков на отчёты COVID-2019 по Украине
 site.obey.subscribe.greeting=Форма добавления чатов, игнорирующих приветствия
 site.obey.exchange=Котировки валют
 site.obey.exchange.update=Обновить котировки валют
-site.obey.covid.send=Отправить отчёт по COVID-19
+site.obey.covid.send=Отправить отчёты по COVID-19
 site.obey.motofan.send=Отправить новые посты с форума MotoFan.Ru
 site.obey.send=Отправить
 site.obey.send.title=Отправить в чат
