--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -356,10 +356,11 @@ site.obey.setup=Telegram Bot Settings Form
 site.obey.subscribe.digest=Add Digest Subscriber Form
 site.obey.subscribe.motofan=Add MotoFan.Ru Subscriber Form
 site.obey.subscribe.covid=Add COVID-2019 Subscriber Form
+site.obey.subscribe.covid.ua=Add COVID-2019 Ukraine Subscriber Form
 site.obey.subscribe.greeting=Add Greetings Ignoring Chat Form
 site.obey.exchange=Exchange Rates
 site.obey.exchange.update=Update Exchange Rates
-site.obey.covid.send=Send COVID-2019 Report
+site.obey.covid.send=Send COVID-2019 Reports
 site.obey.motofan.send=Send New MotoFan.Ru Posts
 site.obey.send=Send
 site.obey.send.title=Send to chat
