Fix help page on site

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -466,7 +466,7 @@ Messages are sent immediately but if the user himself wrote a digest then a mess
 to him in a chat with the bot.<br/>\
 2. Subscription to new posts from the MotoFan.Ru forum, which all are sent every 20 minutes.<br/>\
 3. Subscription to the COVID-19 pandemic report in the Russian Federation, the report is sent daily.<br/><br/>\
-The COVID-19 pandemic report in the Ukraine is sent exclusively to the MotoFan.Ru Telegram chat. \
+4. Subscription to the COVID-19 pandemic report in the Ukraine, the report is sent daily.<br/><br/>\
 There are corresponding COVID-19 API \
 (<a href="/api/covid/ru" title="COVID-19 pandemic in Russian Federation." target="_blank">Ru</a>, \
 <a href="/api/covid/ua" title="COVID-19 pandemic in Ukraine." target="_blank">Ua</a>), \
