--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -466,7 +466,7 @@ site.help.command.subscribe.desc=\
 ботом сообщение отправлено не будет.<br/>\
 2. Подписка на новые сообщения с форума MotoFan.Ru, которые отправляются скопом каждые 20 минут.<br/>\
 3. Подписка на отчёт по пандемии COVID-19 в Российской Федерации, отчёт отправляется ежедневно.<br/><br/>\
-Эксклюзивно для Telegram-чата MotoFan.Ru в конференцию отправляется отчёт по пандемии COVID-19 в Украине. \
+4. Подписка на отчёт по пандемии COVID-19 в Украине, отчёт отправляется ежедневно.<br/><br/>\
 Для различных нужд были подготовлены соответствующие API \
 (<a href="/api/covid/ru" title="Пандемия COVID-19 в Российской Федерации." target="_blank">Ru</a>, \
 <a href="/api/covid/ua" title="Пандемия COVID-19 в Украине." target="_blank">Ua</a>), \
