Drop flag on image COVID report

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -588,6 +588,7 @@ site.help.back=← Перейти к содержанию
 site.help.back.title=К содержанию!
 
 covid.head=<strong>Коронавирус в Российской Федерации (COVID-19) 🇷🇺</strong>
+covid.head.simple=Коронавирус в Российской Федерации (COVID-19)
 covid.head.cases=Заразилось: %s
 covid.head.recover=Выздоровело: %s
 covid.head.deaths=Умерло: %s
