Fix COVID-19 Service tests

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -588,7 +588,7 @@ site.help.back=← Back to the Table of Contents
 site.help.back.title=Go to the Table of Contents!
 
 covid.head=<strong>COVID-19 pandemic in Russian Federation (COVID-19) 🇷🇺</strong>
-covid.head.simple=COVID-19 pandemic in Russian Federation (COVID-19)
+covid.head.simple=<strong>COVID-19 pandemic in Russian Federation (COVID-19)</strong>
 covid.head.cases=Cases: %s
 covid.head.recover=Recoveries: %s
 covid.head.deaths=Deaths: %s
