Improve /game command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -116,6 +116,13 @@ bot.command.help.admin=\
 /info — Show system information.
 bot.command.info=*System Information*\n\n```\n%s\n```
 bot.command.game=Game statistics:
+bot.command.game.online=✅ Online
+bot.command.game.offline=❌ Offline
+bot.command.game.host=Host
+bot.command.game.map=Map
+bot.command.game.players=Players
+bot.command.game.quake2=*Quake II Dedicated Server* %s\n\n```\n%s\n```
+bot.command.game.quake2.info=Type `connect %s` in game console to play!
 bot.command.charts=📈 Please select a chart 📉
 bot.command.subscribe=\
 Chat "%s" with id `%d` subscriptions to various channels.\n\n\
