--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -116,6 +116,13 @@ bot.command.help.admin=\
 /info — Показать системную информацию.
 bot.command.info=*Системная информация*\n\n```\n%s\n```
 bot.command.game=Игровая статистика:
+bot.command.game.online=✅ В сети!
+bot.command.game.offline=❌ Не в сети!
+bot.command.game.host=Хост
+bot.command.game.map=Карта
+bot.command.game.players=Игроки
+bot.command.game.quake2=*Сервер Quake II* %s\n\n```\n%s\n```
+bot.command.game.quake2.info=Введи `connect %s` в консоли игры для входа!
 bot.command.charts=📈 Пожалуйста, выберите график 📉
 bot.command.subscribe=\
 Подписка чата "%s" с id `%d` на различные каналы.\n\n\
