Drop Morning Worker

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -155,7 +155,7 @@ Please choose `/debug` command with argument:\n\
 /debug VAvatars — Update user avatars.\n\
 /debug VQueries — Clear inline queries map.\n\
 /debug VCovid — Send daily COVID-19 report.\n\
-/debug VMorning — Send good morning phrase.\n\
+/debug VBirthday — Send MotoFan.Ru birthdays.\n\
 /debug VFlat — Send apartment suggestions.\n\
 /debug BLogUpdates — Show updates in system log.\n\
 /debug BGreetings — Disable greetings.\n\
@@ -354,7 +354,7 @@ site.obey.digest.edit=Edit Digest Form
 site.obey.digest.shredder=Drop Obsolete Digests
 site.obey.digest.callback=Clear Callback Queries map
 site.obey.digest.callback.size=Size:
-site.obey.digest.morning=Send Good Morning phrase
+site.obey.digest.birthday=Send MotoFan.Ru birthdays
 site.obey.user.add=Add Digest User Form
 site.obey.user.edit=Edit Digest User Form
 site.obey.user.avatar=Update User Avatars
@@ -547,8 +547,8 @@ and send them to subscribers, if any.<br/>\
 — Clear the inline request stack which is used to limit clicking on the bot buttons.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VCovid</strong> \
 — Receive and send COVID-19 reports to all subscribers chats.<br/>\
-&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
-— Send the random good morning phrase to the MotoFan.Ru Telegram chat.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VBirthday</strong> \
+— Send the random good morning phrase and MotoFan.Ru birthdays to the MotoFan.Ru Telegram chat.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VFlat</strong> \
 — Send apartment suggestions to the private chat.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
@@ -577,9 +577,9 @@ List of working services (time is presented by in 24-hour format and MSK time zo
 &bull; <strong class="help-argument">bot.covid.report</strong> \
 — Service for receiving and sending COVID-19 pandemic reports, \
 receiving and sending reports occurs at 15:00 every day.<br/>\
-&bull; <strong class="help-argument">bot.morning.send</strong> \
-— Good morning random phrase sending service, \
-phrase sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
+&bull; <strong class="help-argument">bot.motofan.birthday</strong> \
+— Good morning random phrase and MotoFan.Ru birthdays sending service, \
+report sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Service for receiving and updating exchange rates from all official sources, \
 receiving and updating rates occurs at 13:00 and 16:00 twice a day.<br/>\
