--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -155,7 +155,7 @@ bot.command.debug.help=\
 /debug VAvatars — Обновить аватары пользователей.\n\
 /debug VQueries — Очистить стек inline-запросов.\n\
 /debug VCovid — Отправить отчёт по COVID-19.\n\
-/debug VMorning — Отправить фразу с добрым утром.\n\
+/debug VBirthday — Отправить дни рождения форума MotoFan.Ru.\n\
 /debug VFlat — Отправить варианты недвижимости.\n\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
@@ -354,7 +354,7 @@ site.obey.digest.edit=Форма редактирования дайджеста
 site.obey.digest.shredder=Удаление устаревших дайджестов
 site.obey.digest.callback=Очистить карту обратных запросов
 site.obey.digest.callback.size=Размер:
-site.obey.digest.morning=Отправить фразу с добрым утром
+site.obey.digest.birthday=Отправить дни рождения MotoFan.Ru
 site.obey.user.add=Форма добавления пользователя
 site.obey.user.edit=Форма редактирования пользователя
 site.obey.user.avatar=Обновить аватары пользователей
@@ -547,8 +547,8 @@ site.help.command.debug.desc=\
 — Очистить стек inline-запросов, который служит для ограничения нажатий на кнопки бота.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VCovid</strong> \
 — Получить и отправить отчёты по COVID-19 во все чаты подписчикам.<br/>\
-&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VMorning</strong> \
-— Отправить фразу с добрым утром в Telegram-чат MotoFan.Ru, фраза будет выбрана случайная.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VBirthday</strong> \
+— Отправить фразу с добрым утром и дни рождения в Telegram-чат MotoFan.Ru, фраза будет выбрана случайная.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VFlat</strong> \
 — Отправить варианты недвижимости в личный чат.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">BLogUpdates</strong> \
@@ -577,9 +577,9 @@ site.help.other=\
 &bull; <strong class="help-argument">bot.covid.report</strong> \
 — Сервис получения и отправки отчётов по пандемии COVID-19, \
 получение и отправка отчётов происходит в 15:00 каждый день.<br/>\
-&bull; <strong class="help-argument">bot.morning.send</strong> \
-— Сервис отправки случайной фразы с добрым утром в Telegram-чат MotoFan.Ru, \
-фраза отправляется в 07:00 каждый день.<br/>\
+&bull; <strong class="help-argument">bot.motofan.birthday</strong> \
+— Сервис отправки случайной фразы с добрым утром и дней рождений пользователей форума в Telegram-чат MotoFan.Ru, \
+отчёт отправляется в 07:00 каждый день.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Сервис получения и обновления котировок со всех официальных источников, \
 получение и обновление происходит в 13:00 и 16:00 дважды в день.<br/>\
