Fix some translation errors and typos

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,8 +1,8 @@
 motofan.title=Новое сообщение на форуме MotoFan.Ru!
 motofan.wrote=пишет
 motofan.read=Прочитать сообщение в теме:\n➡️
-motofan.birthday=<em>Сегодня %s, на форуме MotoFan.Ru празднуют свой день рождения следующие пользователи:</em>\
-\n\n%s\n\nВсего: %d. Поздравляем!
+motofan.birthday=<em>Сегодня, %s, на форуме MotoFan.Ru празднуют свой день рождения следующие пользователи:</em>\
+\n%s\nВсего: %d. Поздравляем!
 
 exchange.error.value=<error>
 exchange.error.report=Ошибка получения данных котировок.
@@ -155,7 +155,7 @@ bot.command.debug.help=\
 /debug VAvatars — Обновить аватары пользователей.\n\
 /debug VQueries — Очистить стек inline-запросов.\n\
 /debug VCovid — Отправить отчёт по COVID-19.\n\
-/debug VBirthday — Отправить дни рождения форума MotoFan.Ru.\n\
+/debug VBirthday — Отправить дни рождения MotoFan.Ru.\n\
 /debug VFlat — Отправить варианты недвижимости.\n\
 /debug BLogUpdates — Выводить updates в лог.\n\
 /debug BGreetings — Отключить приветствия.\n\
@@ -572,14 +572,14 @@ site.help.other=\
 — Сервис обновления аватаров пользователей, обновление происходит в 04:00 каждый день.<br/>\
 &bull; <strong class="help-argument">bot.motofan.receiver</strong> \
 — Сервис получения новых сообщений с форума MotoFan.Ru, каждые 20 минут производится проверка на новые сообщения.<br/>\
+&bull; <strong class="help-argument">bot.motofan.birthday</strong> \
+— Сервис отправки случайной фразы с добрым утром и дней рождений пользователей форума в Telegram-чат MotoFan.Ru, \
+отчёт отправляется в 07:00 каждый день.<br/>\
 &bull; <strong class="help-argument">bot.digest.shredder</strong> \
 — Сервис очистки неактуальных дайджестов, очистка происходит в 05:00 по понедельникам.<br/>\
 &bull; <strong class="help-argument">bot.covid.report</strong> \
 — Сервис получения и отправки отчётов по пандемии COVID-19, \
 получение и отправка отчётов происходит в 15:00 каждый день.<br/>\
-&bull; <strong class="help-argument">bot.motofan.birthday</strong> \
-— Сервис отправки случайной фразы с добрым утром и дней рождений пользователей форума в Telegram-чат MotoFan.Ru, \
-отчёт отправляется в 07:00 каждый день.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Сервис получения и обновления котировок со всех официальных источников, \
 получение и обновление происходит в 13:00 и 16:00 дважды в день.<br/>\
