--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 motofan.title=New message on the MotoFan.Ru forum!
 motofan.wrote=wrote
 motofan.read=Read message in the topic:\n➡️
-motofan.birthday=<em>Today on %s, the MotoFan.Ru forum celebrates following user birthdays:</em>\
-\n\n%s\n\nTotal: %d. Happy Birthday!
+motofan.birthday=<em>Today on, %s, the MotoFan.Ru forum celebrates following user birthdays:</em>\
+\n%s\nTotal: %d. Happy Birthday!
 
 exchange.error.value=<error>
 exchange.error.report=Error getting currency rates data.
@@ -572,14 +572,14 @@ List of working services (time is presented by in 24-hour format and MSK time zo
 — User avatars update service, update occurs at 04:00 every day.<br/>\
 &bull; <strong class="help-argument">bot.motofan.receiver</strong> \
 — Service for receiving new posts from the MotoFan.Ru forum, check for new messages is performed every 20 minutes.<br/>\
+&bull; <strong class="help-argument">bot.motofan.birthday</strong> \
+— Good morning random phrase and MotoFan.Ru birthdays sending service, \
+report sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">bot.digest.shredder</strong> \
 — Irrelevant digests cleaning service, cleaning occurs at 05:00 on Mondays.<br/>\
 &bull; <strong class="help-argument">bot.covid.report</strong> \
 — Service for receiving and sending COVID-19 pandemic reports, \
 receiving and sending reports occurs at 15:00 every day.<br/>\
-&bull; <strong class="help-argument">bot.motofan.birthday</strong> \
-— Good morning random phrase and MotoFan.Ru birthdays sending service, \
-report sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Service for receiving and updating exchange rates from all official sources, \
 receiving and updating rates occurs at 13:00 and 16:00 twice a day.<br/>\
