Improve translations and update Tests document

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,8 @@
 motofan.title=New message on the MotoFan.Ru forum!
 motofan.wrote=wrote
 motofan.read=Read message in the topic:\n➡️
-motofan.birthday=<em>Today on, %s, the MotoFan.Ru forum celebrates following user birthdays:</em>\
-\n%s\nTotal: %d. Happy Birthday!
+motofan.birthday=<em>Today on %s, the MotoFan.Ru forum celebrates following user birthdays:</em>\
+\n%s\nTotal: %d. Happy Birthday guys! 🎂🥂
 
 exchange.error.value=<error>
 exchange.error.report=Error getting currency rates data.
