--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,8 +1,8 @@
 motofan.title=Новое сообщение на форуме MotoFan.Ru!
 motofan.wrote=пишет
 motofan.read=Прочитать сообщение в теме:\n➡️
-motofan.birthday=<em>Сегодня, %s, на форуме MotoFan.Ru празднуют свой день рождения следующие пользователи:</em>\
-\n%s\nВсего: %d. Поздравляем!
+motofan.birthday=<em>Сегодня %s, на форуме MotoFan.Ru празднуют свой день рождения следующие пользователи:</em>\
+\n%s\nВсего: %d. Поздравляем их с Днём Рождения! 🎂🥂
 
 exchange.error.value=<error>
 exchange.error.report=Ошибка получения данных котировок.
