Separate game servers polling
Add additional game server settings
Fix translations and Settings documentation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,7 @@ bot.error.send.image=Cannot send image from url `%s` into `%d` chat, error:\n```
 bot.error.access=Unfortunately, %username%, you are not allowed to use this command.
 bot.error.hostip=Unknown\n\nError getting host IP address:\n%s
 bot.error.game=Cannot get game statistics, error:\n```\n%s\n```
+bot.error.game.server=Cannot parse server response.
 bot.error.chart=Cannot get chart image, error:\n```\n%s\n```
 bot.error.sticker.format=\
 Wrong command format, please use:\n\
@@ -123,8 +124,8 @@ bot.command.game.offline=❌ Offline
 bot.command.game.host=Host
 bot.command.game.map=Map
 bot.command.game.players=Players
-bot.command.game.quake2=*Quake II Dedicated Server* %s\n\n```\n%s\n```
-bot.command.game.quake2.info=Type `connect %s` in game console to play!
+bot.command.game.server=*%s Dedicated Server* %s\n\n```\n%s\n```
+bot.command.game.server.info=Type `connect %s` in game console to play!
 bot.command.charts=📈 Please select a chart 📉
 bot.command.subscribe=\
 Chat "%s" with id `%d` subscriptions to various channels.\n\n\
