--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -31,6 +31,7 @@ bot.error.send.image=Не могу отправить изображение с 
 bot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.
 bot.error.hostip=Неизвестный\n\nОшибка получения IP-адреса:\n%s
 bot.error.game=Не могу получить игровую статистику, ошибка:\n```\n%s\n```
+bot.error.game.server=Ошибка обработки ответа сервера.
 bot.error.chart=Не могу получить изображение графика, ошибка:\n```\n%s\n```
 bot.error.sticker.format=\
 Неправильный формат команды, используйте:\n\
@@ -123,8 +124,8 @@ bot.command.game.offline=❌ Не в сети!
 bot.command.game.host=Хост
 bot.command.game.map=Карта
 bot.command.game.players=Игроки
-bot.command.game.quake2=*Сервер Quake II* %s\n\n```\n%s\n```
-bot.command.game.quake2.info=Введи `connect %s` в консоли игры для входа!
+bot.command.game.server=*Сервер %s* %s\n\n```\n%s\n```
+bot.command.game.server.info=Введи `connect %s` в консоли игры для входа!
 bot.command.charts=📈 Пожалуйста, выберите график 📉
 bot.command.subscribe=\
 Подписка чата "%s" с id `%d` на различные каналы.\n\n\
