Fixed some warnings in resource files

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -119,8 +119,8 @@ bot.command.help.admin=\
 /info — Показать системную информацию.
 bot.command.info=*Системная информация*\n\n```\n%s\n```
 bot.command.game=Игровая статистика:
-bot.command.game.online=✅ В сети!
-bot.command.game.offline=❌ Не в сети!
+bot.command.game.online=✅ В сети
+bot.command.game.offline=❌ Не в сети
 bot.command.game.host=Хост
 bot.command.game.map=Карта
 bot.command.game.players=Игроки
