Add Open Graph meta tags

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -229,6 +229,8 @@ Huh… What a terrible sleepless night… 😞 ☕\n\
 Good morning! ☕
 
 site.title=MotoFan.Ru news in Telegram group!
+site.og.title=MotoFan.Ru in Telegram group!
+site.og.description=You can read news and messages with #digest tag here.
 site.title.search=Search | MotoFan.Ru news in Telegram group!
 site.title.error=Error | MotoFan.Ru news in Telegram group!
 site.title.help=Help | MotoFan.Ru news in Telegram group!
