--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -229,6 +229,8 @@ bot.morning=\
 Доброго утра! ☕
 
 site.title=Новости MotoFan.Ru в конференции Telegram!
+site.og.title=MotoFan.Ru в конференции Telegram!
+site.og.description=Вы можете прочитать здесь все новости и сообщения конференции с тегом #digest.
 site.title.search=Поиск | Новости MotoFan.Ru в конференции Telegram!
 site.title.error=Ошибка | Новости MotoFan.Ru в конференции Telegram!
 site.title.help=Помощь | Новости MotoFan.Ru в конференции Telegram!
