Rate Subscription: implement front-end part

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -369,9 +369,11 @@ site.obey.subscribe.digest=Add Digest Subscriber Form
 site.obey.subscribe.motofan=Add MotoFan.Ru Subscriber Form
 site.obey.subscribe.covid=Add COVID-19 Subscriber Form
 site.obey.subscribe.covid.ua=Add COVID-19 Ukraine Subscriber Form
+site.obey.subscribe.rate=Add Exchange Rate Subscriber Form
 site.obey.subscribe.greeting=Add Greetings Ignoring Chat Form
 site.obey.exchange=Exchange Rates
 site.obey.exchange.update=Update Exchange Rates
+site.obey.exchange.send=Send Exchange Rates
 site.obey.covid.send=Send COVID-19 Reports
 site.obey.motofan.send=Send New MotoFan.Ru Posts
 site.obey.send=Send
