Rate Subscription: add to subscription keyboard

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -137,6 +137,8 @@ Status: %s\n\n\
 Status: %s\n\n\
 4. Daily COVID-19 pandemic report in the Ukraine\n\
 Status: %s\n\n\
+5. Daily exchange rates report\n\
+Status: %s\n\n\
 Please select an action:
 bot.command.subscribe.subscribed=✅ Subscribed.
 bot.command.subscribe.unsubscribed=❌ Unsubscribed.
@@ -148,6 +150,8 @@ bot.command.subscribe.button.subscribe.covid=3. Subscribe
 bot.command.subscribe.button.unsubscribe.covid=3. Unsubscribe
 bot.command.subscribe.button.subscribe.covid.ua=4. Subscribe
 bot.command.subscribe.button.unsubscribe.covid.ua=4. Unsubscribe
+bot.command.subscribe.button.subscribe.rate=5. Subscribe
+bot.command.subscribe.button.unsubscribe.rate=5. Unsubscribe
 bot.command.debug.help=\
 Please choose `/debug` command with argument:\n\
 /debug VRates — Refresh exchange rates.\n\
