--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -137,6 +137,8 @@ bot.command.subscribe=\
 Статус: %s\n\n\
 4. Ежедневный отчёт по пандемии COVID-19 в Украине\n\
 Статус: %s\n\n\
+5. Ежедневный отчёт по котировкам валют\n\
+Статус: %s\n\n\
 Пожалуйста выберите действие:
 bot.command.subscribe.subscribed=✅ Подписка оформлена.
 bot.command.subscribe.unsubscribed=❌ Подписка не оформлена.
@@ -148,6 +150,8 @@ bot.command.subscribe.button.subscribe.covid=3. Подписаться
 bot.command.subscribe.button.unsubscribe.covid=3. Отписаться
 bot.command.subscribe.button.subscribe.covid.ua=4. Подписаться
 bot.command.subscribe.button.unsubscribe.covid.ua=4. Отписаться
+bot.command.subscribe.button.subscribe.rate=5. Подписаться
+bot.command.subscribe.button.unsubscribe.rate=5. Отписаться
 bot.command.debug.help=\
 Выберите команду `/debug` с параметром:\n\
 /debug VRates — Обновить котировки валют.\n\
