Rate Subscription: add rate worker and glue for it

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -155,6 +155,7 @@ bot.command.subscribe.button.unsubscribe.rate=5. Unsubscribe
 bot.command.debug.help=\
 Please choose `/debug` command with argument:\n\
 /debug VRates — Refresh exchange rates.\n\
+/debug VRatesSub — Send daily rates report.\n\
 /debug VPosts — Get latest MotoFan.Ru forum posts.\n\
 /debug VShredder — Run database shredder.\n\
 /debug VAvatars — Update user avatars.\n\
@@ -545,6 +546,8 @@ parameters and manage various services with using the arguments that are passed 
 List of actual command arguments:<br/><div class="help-shift">\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRates</strong> \
 — Update exchange rates in the database from all official sources.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRatesSub</strong> \
+— Send exchange rates reports to all chat subscribers.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VPosts</strong> \
 — Receive new posts from the MotoFan.Ru forum immediately \
 and send them to subscribers, if any.<br/>\
@@ -555,7 +558,7 @@ and send them to subscribers, if any.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VQueries</strong> \
 — Clear the inline request stack which is used to limit clicking on the bot buttons.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VCovid</strong> \
-— Receive and send COVID-19 reports to all subscribers chats.<br/>\
+— Receive and send COVID-19 reports to all subscriber chats.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VBirthday</strong> \
 — Send the random good morning phrase and MotoFan.Ru birthdays to the MotoFan.Ru Telegram chat.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VFlat</strong> \
