--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -155,6 +155,7 @@ bot.command.subscribe.button.unsubscribe.rate=5. Отписаться
 bot.command.debug.help=\
 Выберите команду `/debug` с параметром:\n\
 /debug VRates — Обновить котировки валют.\n\
+/debug VRatesSub — Отправить котировки валют.\n\
 /debug VPosts — Последние сообщения форума MotoFan.Ru.\n\
 /debug VShredder — Запустить очистку базы данных.\n\
 /debug VAvatars — Обновить аватары пользователей.\n\
@@ -545,6 +546,8 @@ site.help.command.debug.desc=\
 Список актуальных аргументов команды:<br/><div class="help-shift">\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRates</strong> \
 — Обновление котировок в базе данных со всех официальных источников.<br/>\
+&bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VRatesSub</strong> \
+— Отправить котировки валют в чаты всем подписчикам.<br/>\
 &bull; <strong class="help-command">/debug</strong> <strong class="help-argument">VPosts</strong> \
 — Незамедлительно получить новые сообщения с форума MotoFan.Ru, \
 если таковые сообщения имеются, они будут отправлены подписчикам.<br/>\
