Rate Subscription: add task to cron

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -589,12 +589,14 @@ List of working services (time is presented by in 24-hour format and MSK time zo
 report sent to the MotoFan.Ru Telegram chat at 07:00 every day.<br/>\
 &bull; <strong class="help-argument">bot.digest.shredder</strong> \
 — Irrelevant digests cleaning service, cleaning occurs at 05:00 on Mondays.<br/>\
-&bull; <strong class="help-argument">bot.covid.report</strong> \
-— Service for receiving and sending COVID-19 pandemic reports, \
-receiving and sending reports occurs at 15:00 every day.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Service for receiving and updating exchange rates from all official sources, \
 receiving and updating rates occurs at 13:00 and 16:00 twice a day.<br/>\
+&bull; <strong class="help-argument">exchange.rates.send</strong> \
+— Service for sending exchange rates to subscribers, sending rates occurs at 14:00 every day.<br/>\
+&bull; <strong class="help-argument">bot.covid.report</strong> \
+— Service for receiving and sending COVID-19 pandemic reports, \
+receiving and sending reports occurs at 15:00 every day.<br/>\
 &bull; <strong class="help-argument">flat.report.send</strong> \
 — Service for receiving and sending apartment suggestion reports \
 receiving and sending reports occurs at 06:00 and 18:00 twice a day.<br/><br/>\
