--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -589,12 +589,14 @@ site.help.other=\
 отчёт отправляется в 07:00 каждый день.<br/>\
 &bull; <strong class="help-argument">bot.digest.shredder</strong> \
 — Сервис очистки неактуальных дайджестов, очистка происходит в 05:00 по понедельникам.<br/>\
-&bull; <strong class="help-argument">bot.covid.report</strong> \
-— Сервис получения и отправки отчётов по пандемии COVID-19, \
-получение и отправка отчётов происходит в 15:00 каждый день.<br/>\
 &bull; <strong class="help-argument">exchange.rates.update</strong> \
 — Сервис получения и обновления котировок со всех официальных источников, \
 получение и обновление происходит в 13:00 и 16:00 дважды в день.<br/>\
+&bull; <strong class="help-argument">exchange.rates.send</strong> \
+— Сервис отправки котировок валют подписчикам, отправка происходит в 14:00 каждый день.<br/>\
+&bull; <strong class="help-argument">bot.covid.report</strong> \
+— Сервис получения и отправки отчётов по пандемии COVID-19, \
+получение и отправка отчётов происходит в 15:00 каждый день.<br/>\
 &bull; <strong class="help-argument">flat.report.send</strong> \
 — Сервис получения и отправки отчётов предложений недвижимости, \
 получение и отправка отчётов происходит в 06:00 и 18:00 дважды в день.<br/><br/>\
