Fix exchange rate Telegram markup

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,15 +9,15 @@ exchange.error.report=Error getting currency rates data.
 exchange.change.up=↑
 exchange.change.down=↓
 exchange.bank.header=Exchange rates on %s:
-exchange.bank.ru=Source — CBR.
-exchange.bank.ua=Source — NBU.
-exchange.bank.by=Source — NB RB.
-exchange.bank.kz=Source — NBK.
+exchange.bank.ru=Source — CBR. Currency: `%s`.
+exchange.bank.ua=Source — NBU. Currency: `%s`.
+exchange.bank.by=Source — NB RB. Currency: `%s`.
+exchange.bank.kz=Source — NBK. Currency: `%s`.
 exchange.metal.ru.header=Prices for 1 gram on %s:
-exchange.metal.ru.gold=Gold:
-exchange.metal.ru.silver=Silver:
-exchange.metal.ru.platinum=Platinum:
-exchange.metal.ru.palladium=Palladium:
+exchange.metal.ru.gold=Au:
+exchange.metal.ru.silver=Ag:
+exchange.metal.ru.platinum=Pt:
+exchange.metal.ru.palladium=Pd:
 exchange.bank.ru.button=🇷🇺
 exchange.bank.ua.button=🇺🇦
 exchange.bank.by.button=🇧🇾
