Add bitcoin button

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ exchange.bank.ua.button=🇺🇦
 exchange.bank.by.button=🇧🇾
 exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
+exchange.bitcoin.button=🤑
 
 bot.warn.send.long=[text is cropped]
 bot.error.send.message=Cannot send message `%s` into `%d` chat, error:\n```\n%s\n```
