--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -23,6 +23,7 @@ exchange.bank.ua.button=🇺🇦
 exchange.bank.by.button=🇧🇾
 exchange.bank.kz.button=🇰🇿
 exchange.metal.ru.button=🤘
+exchange.bitcoin.button=🤑
 
 bot.warn.send.long=[текст обрезан]
 bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка:\n```\n%s\n```
